--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -19,7 +19,7 @@
     <string name="start_server_title_root"><![CDATA[通过 ROOT 权限启动服务]]></string>
     <string name="start_server_summary_root"><![CDATA[当其他应用尝试使用时，服务将被自动启动。]]></string>
     <string name="start_server_title_adb"><![CDATA[通过 ADB 启动或升级服务]]></string>
-    <string name="start_server_summary_adb"><![CDATA[您正在使用 Lollipop 版本的系统，根据收到的部分用户报告，在该版本系统上，adb shell 可能没有权限调用部分 API（如 AppOps 相关）。<p>以下步骤需要在每次重新启动后进行。<p>在终端中输入以下内容<p><font face="monospace">adb shell sh /sdcard/Android/data/moe.shizuku.privileged.api/files/start.sh</font><p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
+    <string name="start_server_summary_adb"><![CDATA[<b>以下步骤需要在每次重新启动后进行。</b><p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。<br>在电脑的终端中输入以下内容<p><font face="monospace">adb shell sh /sdcard/Android/data/moe.shizuku.privileged.api/files/start.sh</font><p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
 
     <string name="copy_command">复制</string>
     <string name="send_command">发送</string>
