--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -6,8 +6,8 @@
     <string name="receive_task_stack_changed_label">接收任务栈变化</string>
     <string name="receive_task_stack_changed_description">允许该应用在任务栈发生变化时收到广播。</string>
 
-    <string name="server_running" formatted="false">版本 %2$d 运行中（%1$s）</string>
-    <string name="server_running_update" formatted="false">版本 %2$d 运行中（%1$s）\n重启服务以升级至版本 %3$d</string>
+    <string name="server_running">版本 %2$d 运行中（%1$s）</string>
+    <string name="server_running_update">版本 %2$d 运行中（%1$s）\n重启服务以升级至版本 %3$d</string>
     <string name="server_not_running">点击检查服务是否运行</string>
     <string name="server_require_restart">需要重新启动服务</string>
     <string name="server_no_token">运行中，但未正确接收令牌\n点击请求令牌</string>
@@ -19,7 +19,7 @@
     <string name="start_server_title_root"><![CDATA[通过 ROOT 权限启动服务]]></string>
     <string name="start_server_summary_root"><![CDATA[当其他应用尝试使用时，服务将被自动启动。]]></string>
     <string name="start_server_title_adb"><![CDATA[通过 ADB 启动或升级服务]]></string>
-    <string name="start_server_summary_adb" formatted="false"><![CDATA[<b>以下步骤需要在每次重新启动后进行。</b><p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。<br>在电脑的终端中输入以下内容<p><font face="monospace">%s</font><p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
+    <string name="start_server_summary_adb"><![CDATA[<b>以下步骤需要在每次重新启动后进行。</b><p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。<br>在电脑的终端中输入以下内容<p><font face="monospace">%s</font><p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
 
     <string name="copy_command">复制</string>
     <string name="send_command">发送</string>
