--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -45,5 +45,6 @@
     <string name="open_manager">Open Shizuku Manager</string>
 
     <string name="action_about">About</string>
+    <string name="about_icon_credits"><![CDATA[Thanks <a href="https://twitter.com/xiaoya_er">小雅</a> for making app icon]]></string>
 
 </resources>
