--- a/manager/src/main/res/values-zh-rHK/strings.xml
+++ b/manager/src/main/res/values-zh-rHK/strings.xml
@@ -46,4 +46,6 @@
 
     <string name="about_icon_credits"><![CDATA[感谢 <a href="https://twitter.com/xiaoya_er">小雅</a> 制作应用图标]]></string>
 
+    <string name="action_settings">設定</string>
+
 </resources>
