--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -17,9 +17,9 @@
     <string name="server_restart">Restart</string>
     <string name="server_update">Restart to update server</string>
 
-    <string name="start_server_title_root"><![CDATA[Start server with ROOT permission]]></string>
+    <string name="start_server_title_root"><![CDATA[Start server with root permission]]></string>
     <string name="start_server_summary_root"><![CDATA[Server will be started automatically when other apps try to use it.]]></string>
-    <string name="start_server_title_adb"><![CDATA[Start / update server with ADB]]></string>
+    <string name="start_server_title_adb"><![CDATA[Start / update server with adb]]></string>
     <string name="start_server_summary_adb"><![CDATA[<b>You will have to re-execute following steps every time you reboot your device.</b><p>Enable \"USB debugging\" in \"Developer options\" and connect your device to computer.<br>Type following content into computer\'s terminal and hit Enter<p><font face="monospace">%s</font><p>The server running status will refresh if this operation succeed]]></string>
 
     <string name="copy_command">Copy</string>
@@ -48,5 +48,18 @@
     <string name="about_icon_credits"><![CDATA[Thanks <a href="https://twitter.com/xiaoya_er">小雅</a> for illustrating app icon]]></string>
 
     <string name="action_settings">Settings</string>
+
+    <string name="start_root_choose_launch_method">Choose start method</string>
+    <string name="start_root_method_usual">The usual way</string>
+    <string name="start_root_method_usual_summary">Should work on most devices</string>
+    <string name="start_root_method_alternative">Alternative way</string>
+    <string name="start_root_method_alternative_summary">Try this if you have problem</string>
+
+    <string name="remember_choice">Remember my choice</string>
+
+    <string name="settings_root_launch_method">Start method (root)</string>
+    <string name="settings_root_launch_ask_every_time">Ask every time</string>
+
+    <string name="cant_start_no_root">Can\'t start server because root permission is not granted or this device is not rooted.</string>
 
 </resources>
