--- a/manager/src/main/res/values-zh-rTW/strings.xml
+++ b/manager/src/main/res/values-zh-rTW/strings.xml
@@ -59,6 +59,7 @@
     <string name="settings_root_launch_method">啟動方式（root）</string>
     <string name="settings_root_launch_ask_every_time">每次詢問</string>
 
-    <string name="cant_start_no_root">未授予 root 權限或是該設備沒有 root，因此無法啟動服務。。</string>
+    <string name="cannot_start_no_root">未授予 root 權限或是該設備沒有 root，因此無法啟動服務。。</string>
+    <string name="cannot_start_shell_failed">執行 shell 命令時出錯。</string>
 
 </resources>
