--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -1,11 +1,8 @@
 <resources>
     <string name="app_name" translatable="false">Shizuku Manager</string>
 
-    <string name="request_permission_label">use privileged APIs</string>
-    <string name="request_permission_description">Allow this app to use API which requires app is system app or have system signature (require root permission or start server with adb first).</string>
-
-    <string name="receive_task_stack_changed_label">receive task stack changed</string>
-    <string name="receive_task_stack_changed_description">Allow this app to receive a broadcast when task stack changed.</string>
+    <string name="permission_label">use Shizuku API</string>
+    <string name="permission_description">use APIs provided by Shizuku</string>
 
     <string name="server_running">running version %2$d (%1$s)</string>
     <string name="server_running_update">running version %2$d (%1$s)\nrestart server to update to %3$d</string>
@@ -18,7 +15,6 @@
     <string name="server_update">Restart to update server</string>
 
     <string name="start_server_title_root"><![CDATA[Start server with root permission]]></string>
-    <string name="start_server_summary_root"><![CDATA[Server will be started automatically when other apps try to use it.]]></string>
     <string name="start_server_title_adb"><![CDATA[Start / update server with adb]]></string>
     <string name="start_server_summary_adb"><![CDATA[<b>You will have to re-execute following steps every time you reboot your device.</b><p>Enable \"USB debugging\" in \"Developer options\" and connect your device to computer.<br>Type following content into computer\'s terminal and hit Enter<p><font face="monospace">%s</font><p>The server running status will refresh if this operation succeed]]></string>
 
@@ -60,6 +56,7 @@
     <string name="settings_root_launch_method">Start method (root)</string>
     <string name="settings_root_launch_ask_every_time">Ask every time</string>
 
-    <string name="cant_start_no_root">Can\'t start server because root permission is not granted or this device is not rooted.</string>
+    <string name="cannot_start_no_root">Can\'t start server because root permission is not granted or this device is not rooted.</string>
+    <string name="cannot_start_shell_failed">There\'s something wrong when running shell command.</string>
 
 </resources>
