--- a/manager/src/main/res/values-zh-rTW-v26/strings.xml
+++ b/manager/src/main/res/values-zh-rTW-v26/strings.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="start_server_summary_adb"><![CDATA[
-    <b>由於系統行爲變化，在 Android 8.0 之後，請不要關閉“USB 調試”或將 USB 使用模式改爲”僅充電“，否則服務將被停止。</b>
+    <b>由於系統行爲變動，在 Android 8.0 之後，請不要關閉「USB 偵錯」或將 USB 使用模式改爲「僅充電」，否則服務將被停止。</b>
     <p><b>以下步驟需要在每次重新啟動後進行。</b>
-    <p>在“開發者選項”中開啟“USB 調試”，將設備連接至電腦。
+    <p>在「開發人員選項」中開啟「USB 偵錯」，將裝置連接至電腦。
     <br>在電腦的命令提示字元中輸入以下內容
     <p><font face="monospace">%s</font>
-    <p>按下確認鍵，如果成功將看到主界面運行狀態更新。]]></string>
+    <p>按下確認鍵，如果成功將看到主介面的執行狀態更新。]]></string>
 </resources>
