--- a/manager/src/main/res/values-zh-rCN/strings.xml
+++ b/manager/src/main/res/values-zh-rCN/strings.xml
@@ -12,7 +12,12 @@
     <string name="server_restart">重新启动</string>
     <string name="start_server_title_root"><![CDATA[通过 root 权限启动服务]]></string>
     <string name="start_server_title_adb"><![CDATA[通过 adb 启动或升级服务]]></string>
-    <string name="start_server_summary_adb"><![CDATA[<b>以下步骤需要在每次重新启动后进行。</b><p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。<br>在电脑的终端中输入以下内容<p><font face="monospace">%s</font><p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
+    <string name="start_server_summary_adb"><![CDATA[
+    <b>以下步骤需要在每次重新启动后进行。</b>
+    <p>在“开发者选项”中开启“USB 调试”，将设备连接至电脑。
+    <br>在电脑的终端中输入以下内容
+    <p><font face="monospace">%s</font>
+    <p>按下回车，如果成功将看到主界面运行状态刷新。]]></string>
     <string name="copy_command">复制</string>
     <string name="send_command">发送</string>
     <string name="auth_allow">总是允许</string>
