--- a/manager/src/main/res/values/strings.xml
+++ b/manager/src/main/res/values/strings.xml
@@ -13,7 +13,14 @@
     <string name="server_restart">Restart</string>
     <string name="start_server_title_root"><![CDATA[Start server with root permission]]></string>
     <string name="start_server_title_adb"><![CDATA[Start / update server with adb]]></string>
-    <string name="start_server_summary_adb"><![CDATA[<b>You will have to re-execute following steps every time you reboot your device.</b><p>Enable \"USB debugging\" in \"Developer options\" and connect your device to computer.<br>Type following content into computer\'s terminal and hit Enter<p><font face="monospace">%s</font><p>The server running status will refresh if this operation succeed]]></string>
+    <string name="start_server_summary_adb"><![CDATA[<b>You will have to re-execute following steps every time you reboot your device.</b>
+    <p>Enable \"USB debugging\" in \"Developer options\" and connect your device to computer.
+    <br>Type following content into computer\'s terminal and hit Enter
+    <p><font face="monospace">%s</font>
+    <p>The server running status will refresh if this operation succeed]]></string>
+    <string name="start_server_summary_root"><![CDATA[
+    If successful starts, Shizuku will automatically start after boot.
+    <br>If this not work properly, please check if your system or third-party tools have restricted start on boot of Shizuku Manager.]]></string>
     <string name="copy_command">Copy</string>
     <string name="send_command">Send</string>
     <string name="auth_allow">Always allow</string>
